--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,11 +4,14 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 :root {
     --primary-color: #0F1B4C;
 }
+
+
 
 body {
     font-size: 1.6rem;
@@ -51,16 +54,25 @@ a {
 }
 
 /*----------------Header------------------- */
-.header {
+.fixed-header {
+    background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
     position: relative;
-    height: 100vh;
+    height: calc(100vh - 90px);
     background: #e6f0ff;
 }
 
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    padding: 12px 0;
+    /* padding-top: 38px; */
 }
 
 .navbar ul {
@@ -103,7 +115,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    padding-top: 130px;
     display: flex;
 }
 
@@ -170,6 +182,18 @@ a {
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 20px;
+}
+
+.clients .images a {
+    display: flex;
+    align-items: center;
+    height: 90px;
+    padding: 0 42px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
 }
 
 .clients .images {
@@ -589,6 +613,10 @@ a {
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 28px;
+}
+
+.footer .column a img {
+    margin-right: 10px;
 }
 
 .footer .row-bottom {
